--- a/week3-hw/style.css
+++ b/week3-hw/style.css
@@ -146,6 +146,7 @@ h1 {
 /* card1 : button */
 
 .btn {
+    cursor: pointer;
     font-size: 1rem;
     background-color: #ffffff;
     border-radius: 10px;
